js/js.translator/testData/incremental/invalidation/privateInlineFunction1/main/m.kt

fun box() = qux(4, 2)